<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.octri.authentication</groupId>
	<artifactId>authentication_lib_parent</artifactId>
	<version>0.9.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>authentication_parent</name>
	<description>Library for Spring Security Authentication</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.8</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
	</properties>

	<modules>
		<module>authentication_lib</module>
		<module>authentication_ui_bootstrap4</module>
		<module>authentication_ui_bootstrap5</module>
	</modules>
</project>
